Fix: Layout gap on the left
Adjust layout to address the gap on the left side of the page.

--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@
 .full-width {
   width: 100vw;
   max-width: 100vw;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
   padding-left: 0;
   padding-right: 0;
 }
@@ -48,6 +48,8 @@
 body, html {
   overflow-x: hidden;
   max-width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /* Additional fixes to ensure content loads properly */
